# paradise-json-sync

./: .gitignore  README.md  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  security-scan.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: exporter.py  processor.py
backend/app/utils/: file_utils.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  exceptions.py
backend/src/api/routes/: __init__.py  download.py  health.py  process.py  purchases.py  status.py  upload.py
backend/src/api/schemas/: __init__.py  process.py  purchases.py  responses.py  status.py  upload.py
backend/src/core/: __init__.py  data_validator.py  excel_exporter.py  json_processor.py  multipart_config.py  pdf_processor.py  rate_limiter.py
backend/src/core/purchases/: __init__.py  base_mapper.py  format_detector.py  mapper_registry.py  pdf_extractor.py  purchase_exporter.py  validator.py
backend/src/core/purchases/mappers/: __init__.py  dte_standard.py  generic_fallback.py  pdf_extracted.py
backend/src/models/: __init__.py  invoice.py  purchase_invoice.py
backend/src/services/: __init__.py  file_service.py  job_service.py  purchase_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_download.py  test_health.py  test_process.py  test_process_formats.py  test_purchases_api.py  test_status.py  test_upload.py  test_upload_bulk.py
backend/tests/integration/: __init__.py  conftest.py  test_error_handling.py  test_full_flow.py
backend/tests/unit/: __init__.py  test_cors_middleware.py  test_csv_exporter.py  test_data_validator.py  test_excel_exporter.py  test_exceptions.py  test_file_service.py  test_format_detector.py  test_job_service.py  test_json_exporter.py  test_json_processor.py  test_mappers.py  test_models_invoice.py  test_pdf_exporter.py  test_pdf_extractor.py  test_pdf_processor.py  test_purchase_exporter.py  test_purchase_invoice.py  test_purchase_validator.py  test_schemas.py
docs/: EL_PUNTO_DE_PARTIDA_by_SamuelERS.md  README.md  REGLAS_DESARROLLO.md  REGLAS_DE_LA_CASA.md  REGLAS_DOCUMENTACION.md  REGLAS_INSPECCION.md  REGLAS_MOLDE_ORDENES_DE_TRABAJO.md  REGLAS_PROGRAMADOR.md  TESTING.md
docs/02_arquitectura/Caso_Facturas_Compras_20260206/: 00_README.md  01_TODO_LIST_PRINCIPAL_(Lista-Maestra-de-Tareas).md  02_VISION_Y_ALCANCE_(Que-Vamos-a-Construir-y-Por-Que).md  03_ARQUITECTURA_GENERAL_(Diseño-del-Motor-de-Procesamiento).md  04_MODELO_CANONICO_(Estructura-Universal-de-Factura-de-Compra).md  05_DETECTOR_FORMATO_(Sistema-Inteligente-de-Identificacion).md  06_MAPPERS_Y_REGISTRO_(Convertidores-de-Formato-por-Proveedor).md  07_VALIDADOR_COMPRAS_(Verificacion-y-Calidad-de-Datos).md  08_API_Y_SERVICIOS_(Rutas-del-Backend-para-Compras).md  09_EXPORTADOR_COMPRAS_(Reportes-Configurables-sin-Perder-Datos).md  10_SOPORTE_PDF_(Extraccion-de-Datos-desde-PDF).md  11_FRONTEND_UI_(Interfaz-de-Usuario-para-Compras).md  12_TESTING_Y_CICD_(Pruebas-y-Despliegue-Continuo).md  13_REGLAS_NO_NEGOCIABLES_(Normas-Obligatorias-para-Cada-Agente).md  CERTIFICADO_DE_CALIDAD.md  ORDEN_EJECUTIVA_FASE_1.md
docs/02_arquitectura/Caso_Guia_Arquitectonica_20250204/: 00_README.md  01_Vision_General.md  02_Stack_Tecnologico.md  (+9 more)
docs/La_Receta_Maestra_by_SamuelERS/: 00_README.md  00a_GUIA_DE_ROLES_Y_MISIONES.md  01_Introduccion_La_Cocina_del_Desarrollador.md  01a_Los_Mandamientos_del_Chef_(Principios_Inmutables).md  02_Paso1_Que_Cocinaremos_Hoy_(Analisis_y_Tecnologia).md  03_Paso2_Mise_en_Place_(Estructura_de_Carpetas).md  04_Paso3_Herramientas_del_Chef_(Calidad_y_Automatizacion).md  05_Paso4_El_Diario_de_Recetas_(Documentacion_Minima_Viable).md  06_Paso5_Checklist_Final_Antes_de_Empezar.md  07_Evolucion_y_Mejora_Continua.md
docs/_plantillas/: 00_README_CASO.md  01_DIAGNOSTICO.md  02_SOLUCION.md
docs/certificados/: OT-004_CERTIFICADO_VALIDACION.md
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: auth.fixture.ts
e2e/pages/: HomePage.ts  ResultsPage.ts  UploadPage.ts  index.ts
e2e/tests/: download.spec.ts  full-flow.spec.ts  process.spec.ts  upload.spec.ts
e2e/utils/: helpers.ts
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  service-worker.js  vite-env.d.ts
frontend/tests/: setup.ts
scripts/ci/: check-coverage.sh  run-backend-tests.sh  run-frontend-tests.sh
scripts/deploy/: deploy-production.sh  deploy-staging.sh
tests/: __init__.py
tests/ci/: __init__.py  test_workflows.py
(+116 files in other folders)
